# HaffmanArchiver

./: CMakeLists.txt
include/: HuffmanArchiver.h  HuffmanException.h  HuffmanTree.h  binary.h  binary_impl.inl
src/: HuffmanArchiver.cpp  HuffmanException.cpp  HuffmanTree.cpp  binary_bool_impl.cpp  main.cpp
test/: CMakeLists.txt  huffman_test.cpp  huffman_test.h  test.cpp
